# ExecManager

./: CMakeLists.txt
config/: CMakeLists.txt  manifest.proto
src/: CMakeLists.txt  common.cpp  common.h  configMgr.cc  configMgr.h  em.cc  em.h  file.cc  file.h  sm.cc  sm.h
tests/: CMakeLists.txt  main.cc  sample.conf
